--- a/appz.yml
+++ b/appz.yml
@@ -5,13 +5,13 @@ app:
 
 build:
   version: 0.3
-  env: PROD
+  env: DEV
   build_file: pom.xml
   output_files: output/*.war
   image_template: tomcat9
 
 deploy:
-  context: cloudorbit/PROD
+  context: sranjan1995/DEV
   replicas: 1
   session_affinity: ClientIP
   port: 
