--- a/appz.yml
+++ b/appz.yml
@@ -20,10 +20,10 @@ deploy:
 properties:
   MOD_CLUSTER: modcluster-1-3:6666
   title: Tomcat HelloWorld - Basic-AppZ 2.0.3 
-  head_color : Blue
+  head_color : Green
   threads: 2
   delay: 15
   next: 15
   download: false
   random : true
-  nano : 116
+  nano : 117
