--- a/appz.yml
+++ b/appz.yml
@@ -1,7 +1,7 @@
 app:
   name: Tomcat Loadgen
   code: TCLG
-  notify: srswain@ecloudcontrol.com
+ # notify: srswain@ecloudcontrol.com
 
 build:
   version: 0.3
@@ -11,7 +11,7 @@ build:
   image_template: tomcat9
 
 deploy:
-  context: sranjan1995/DEV
+  context: nithinc-cloud/DEV
   replicas: 2
   session_affinity: ClientIP
   port: 
