--- a/appz.yml
+++ b/appz.yml
@@ -1,7 +1,7 @@
 app:
   name: Tomcat Loadgen
   code: TCLG
-  notify: srswain@ecloudcontrol.com
+  notify: kunnikrishnan@ecloudcontrol.com
 
 build:
   version: 0.3
@@ -20,7 +20,7 @@ deploy:
 properties:
   MOD_CLUSTER: modcluster-1-3:6666
   title: Tomcat HelloWorld - Basic-AppZ 2.0.3 
-  head_color : Blue
+  head_color : Green
   threads: 2
   delay: 15
   next: 15
